# tile-cutter

./: .gitignore  tile-cutter.cabal
app/: Main.hs
src/Data/Image/: Resize.hs  TileCutter.hs
