name:                tile-cutter
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/agrafix/tile-cutter#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander Thiemann
maintainer:          mail@athiemann.net
copyright:           2016 Alexander Thiemann <mail@athiemann.net>
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Image.TileCutter
                     , Data.Image.Resize
  build-depends:       base >= 4.7 && < 5
                     , JuicyPixels >= 3.2
                     , parallel >= 3.2
  default-language:    Haskell2010

executable tile-cutter
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tile-cutter
                     , optparse-applicative
                     , JuicyPixels
                     , filepath
                     , directory
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/agrafix/tile-cutter
